<resources>
    <string name="app_name">My BMI Calculator</string>

    <string name="height">Height</string>
    <string name="weight">Weight</string>

    <string name="calculate">Calculate</string>
    <string name="reset">Reset Data</string>

    <string name="last_calc">Last Calculated Date: </string>
    <string name="last_bmi">Last Calculated BMI: </string>
    <string name="remarks"></string>
</resources>
